# yaserializer

./: CMakeLists.txt  conanfile.txt
.github/workflows/: push-and-pull-requests.yml
cmake/: CPM.cmake
include/yaserializer/: enumerates.hpp  integrals.hpp  ranges.hpp
include/yaserializer/concepts/: deserializable.hpp  enumerates.hpp  integrals.hpp  iterators.hpp  ranges.hpp  serializable.hpp
tests/: CMakeLists.txt  enumerates-test.cpp  integrals-test.cpp
tests/ranges/: fixed-size-containers-test.cpp  movable-containers-test.cpp  resizable-containers-test.cpp
tests/ranges/details/: test-utils.hpp
